fixed style of select to make field to be aligned

--- a/trunk/com.antilia.web/src/com/antilia/web/resources/main.css
+++ b/trunk/com.antilia.web/src/com/antilia/web/resources/main.css
@@ -89,6 +89,13 @@ span.largeSelection {
     font-weight: bold;
 }
 
+select.operator {
+	vertical-align: middle;
+    padding: 0px;
+    margin: 0px;
+    height:  17px;
+}
+
 div.vertical-menu {	
 	vertical-align: top;
 	width: 100%;
